--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,85 @@
+@font-face {
+  font-family: "Roboto Slab";
+  src: url('../fonts/RobotoSlab-Regular.ttf')
+}
+
+@font-face {
+  font-family: "Roboto Slab";
+  src: url('../fonts/RobotoSlab-Bold.ttf');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Fira Sans";
+  src: url('../fonts/FiraSans-Regular.ttf');
+}
+
+@font-face {
+  font-family: "Fira Sans";
+  src: url('../fonts/FiraSans-Bold.ttf');
+  font-weight: bold;
+}
+
 body {
-  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family: "Roboto Slab", -apple-system, BlinkMacSystemFont, "Times New Roman", serif;
   padding: 0;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 10px;
   margin: 0;
 }
 
-video {
-   width: 100%;
-   height: auto;
+h1 {
+  padding: 0;
+  margin: 0
 }
 
-body {
-    text-align: center;
-    padding-top: 20px;
+video {
+  padding: 0;
+  padding-left: 2%;
+  margin: 0;
+  font-size: 14;
+  resize: both;
+  overflow: auto;
+  max-height: 80%;
 }
 
 .button {
     font-family: "Fira Sans", Helvetica;
+}
+
+.container {
+  align-content: normal;
+  align-self: center;
+  place-self: center;
+  /* place-items: center; */
+  height: auto;
+  display: grid;
+  grid-template-columns: 15% auto;
+  grid-template-rows: auto auto;
+}
+
+.grid-item1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  place-self: self-end;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+.grid-item2 {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  place-self: self-start;
+  width: 100%;
+  margin-top: 5px;
+}
+
+.grid-item3 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+
+.is-text {
+  width: auto;
 }
